settings trusted devices tab, changed webcam avatar size and removed arc, added ignoring of trust notifications when its not the last notification of session, fixed contacts details stuck on disabling account, fixed contacts details width

--- a/css/xabber.css
+++ b/css/xabber.css
@@ -12482,6 +12482,16 @@ input[type=range].voice-message-volume:focus {
 .settings-panel-wrap .settings-panel .device-information-trust[data-trust="ignore"] .lock-cross{
     display: block;
 }
+.settings-panel-wrap .settings-panel .settings-trust-wrap{
+}
+.settings-panel-wrap .settings-panel .settings-trust-wrap .settings-trust-items-wrap{
+}
+.settings-panel-wrap .settings-panel .settings-trust-wrap .trust-item-peer{
+    margin: 32px 16px;
+}
+.settings-panel-wrap .settings-panel .settings-trust-wrap .trust-item-device{
+    margin: 16px 8px;
+}
 .settings-panel-wrap .settings-panel .setting.idling-time{
     padding: 10px 40% 24px 72px!important;
     position: relative;
